--- a/AngularJS-SocialNetwork/app/home/home.html
+++ b/AngularJS-SocialNetwork/app/home/home.html
@@ -1,4 +1,40 @@
-<div class="row" <div class="coll-md-12 text-center">
-    {{hello}}
-</div>
+<div class="margin-bottom-100"></div>
+<div class="row">
+    <div class="col-md-4 col-md-offset-1 border">
+        <form name="loginUser">
+            <label for="username">Username</label>
+            <input type="text" id="username" class="form-control" />
+            <br />    
+            <label for="password">Password</label>
+            <input type="password" id="password" class="form-control" />
+            <br />
+            <button class="btn btn-primary">Login</button>
+        </form>
+    </div>
+
+    <div class="col-md-4 col-md-offset-1 border">
+        <form name="registerUser">
+            <label for="reg-username">Username</label>
+            <input type="text" id="reg-username" class="form-control" />
+            <br />    
+            <label for="reg-password">Password</label>
+            <input type="password" id="reg-password" class="form-control" />
+            <br />
+            <label for="reg-confirm-password">Confirm Password</label>
+            <input type="password" id="reg-confirm-password" class="form-control" />
+            <br />
+            <label for="reg-name">Name</label>
+            <input type="text" id="reg-name" class="form-control" />
+            <br />
+            <label for="reg-email">Email</label>
+            <input type="email" id="reg-email" class="form-control" />
+            <br />
+            <label for="Gender">Gender</label>
+            <input type="radio" checked="checked" name="reg-gender" value="1"/> Male
+            <input type="radio" name="reg-gender" value="2"/> Female
+            <input type="radio" name="reg-gender" value="0"/> Other
+            <br />
+            <button class="btn btn-primary">Register</button>
+        </form>
+    </div>
 </div>
