--- a/AngularJS-SocialNetwork/index.html
+++ b/AngularJS-SocialNetwork/index.html
@@ -41,6 +41,7 @@
     <script src="app/bower_components/angular/angular.js"></script>
     <script src="app/bower_components/angular-route/angular-route.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/users/authentication.js"></script>
     <script src="app/home/home-controller.js"></script>
 
 </body>
